# libenchant_win8

./: .clang-format  LICENSE  Makefile  README  meson.build
.github/workflows/: build.yml
src/: win8_provider.c  win8_provider.cpp
